--- a/README.html
+++ b/README.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head>CS50 Projects
+    <head>
+        <title>CS50 Projects</title>
         <meta name="viewport" content="width = device-width, initial-scale = 1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <style>
