--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head>CS50 Projects
+    <head>
+        <title>CS50 Projects</title>
         <meta name="viewport" content="width = device-width, initial-scale = 1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <style>
@@ -12,6 +13,7 @@
 
     <body>
         <div>
+            <h2>List of Projects</h2>
             <ol>
                 <li><a href="Project_0/html_files/Resume.html">Project 0</a></li>
             </ol>
