--- a/Project_0/html_files/Resume.html
+++ b/Project_0/html_files/Resume.html
@@ -4,6 +4,11 @@
         <meta name="viewport" content="width = device-width, initial-scale = 1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"><!--Bootstrap 3.4-->
         <title>Akshay's Resume</title>
+        <style>
+        .body{
+            margin:50px;
+        }
+        </style>
         <link rel="stylesheet" href="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/scss_files/styl1.css">
     </head>
     <body>
@@ -34,16 +39,16 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-3" >
                     <br><br>
-                    <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/01.png" height="27px" width="27px" style="float:left" >
-                    <p style="font-size:17px">&#160 akshaykrcc@live.com</p>
-                    <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/2.png" height="27px" width="27px" style="float:left" >
-                    <p style="font-size:17px">&#160 +9110925632</p>
-                    <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/linkedin-icon.png" height="27px" width="27px" style="float:left" >
-                    <p style="font-size:17px">&#160 <a href="https://www.linkedin.com/in/akshay-kumar-b8025a130/">linkedin.com/in/akshay</a></p>
-                    <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/location-icon-png-4252.png" height="27px" width="27px" style="float:left" >
-                    <p style="font-size:17px">&#160 Bangalore, India</p>
-                    <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/z.png" height="27x" width="27px" style="float:left" >
-                    <p style="font-size:17px">&#160 <a href="https://github.com/AkshayKumar007">github.com/akshay</a></p>
+                    <!-- <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/01.png" height="27px" width="27px" style="float:left" > -->
+                    <p style="font-size:17px">&#160 Email: akshaykrcc@live.com</p>
+                    <!-- <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/2.png" height="27px" width="27px" style="float:left" > -->
+                    <p style="font-size:17px">&#160 Phone Number: +9110925632</p>
+                    <!-- <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/linkedin-icon.png" height="27px" width="27px" style="float:left" > -->
+                    <p style="font-size:17px">&#160 <a href="https://www.linkedin.com/in/akshay-kumar-b8025a130/">Linkedin : https://www.linkedin.com/in/akshay-kumar-b8025a130/ </a></p>
+                    <!-- <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/location-icon-png-4252.png" height="27px" width="27px" style="float:left" > -->
+                    <p style="font-size:17px">&#160 Location: Bangalore, India</p>
+                    <!-- <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/z.png" height="27x" width="27px" style="float:left" >
+                    <p style="font-size:17px">&#160 <a href="https://github.com/AkshayKumar007">github.com/akshay</a></p> -->
                 </div>
             </div>
 
@@ -52,12 +57,11 @@
 
                 <div id = "Left_section" class="col-md-6">
                         <h2> TECHNICAL (IT) SKILLS </h2>
-                        <h3> Tools </h3>
-                            <p> Visual Studio Code, Vim, Linux Terminal, Jupyter Notebooks, Bootstrap, Eclipse,
-                                PyCharm, CLion                   
+                        <h3> Tools and Frameworks </h3>
+                            <p> Flask, Bootstrap, Sass, VS Code, Vim, Linux, Jupyter Notebooks 
                             </p>
                         <h3> Programming Languages </h3>
-                            <p>C++, C, Java, Python, HTML, CSS, Sass</p>
+                            <p>C++, C, Java, Python, HTML, CSS, JavaScript</p>
                         <h3> Database Managment </h3>
                             <p>SQL</p>
                         <h3> Cloud Based Technology </h3>
@@ -68,13 +72,13 @@
                         <br><br><br>
                         <h2 id = "certificates"> CERTIFICATIONS </h2>   
                             <h3> Design and Analysis of Algorithms </h3> 
-                                <a href="https://nptel.ac.in/noc/social_cert/noc18-cs37/NPTEL18CS37S211511891810000375.jpg"> <p> NPTEL(IIT-M) </p> </a>
+                                <a href="https://nptel.ac.in/noc/social_cert/noc18-cs37/NPTEL18CS37S211511891810000375.jpg"> <p> NPTEL(IIT-M) : https://nptel.ac.in/noc/social_cert/noc18-cs37/NPTEL18CS37S211511891810000375.jpg </p> </a>
                             <h3> Mathematics for Machine Learning </h3>
-                                <a href="https://www.coursera.org/account/accomplishments/records/L2T4JYRD8BP6"> <p> Coursera </p>  </a>
+                                <a href="https://www.coursera.org/account/accomplishments/records/L2T4JYRD8BP6"> <p> Coursera : https://www.coursera.org/account/accomplishments/records/L2T4JYRD8BP6</p>  </a>
                             <h3> Databases and SQL for Data Science (IBM) </h3>
-                                <a href="https://www.coursera.org/account/accomplishments/verify/EC4R26WVXTA3"> <p> Coursera </p> </a>
-                            <h3> Time Management </h3>
-                                <a href="http://www.linkedin.com/learning/managing-your-time"> <p> Managing your Time </p> </a>
+                                <a href="https://www.coursera.org/account/accomplishments/verify/EC4R26WVXTA3"> <p> Coursera : https://www.coursera.org/account/accomplishments/verify/EC4R26WVXTA3 </p> </a>
+                            <!-- <h3> Time Management </h3>
+                                <a href="http://www.linkedin.com/learning/managing-your-time"> <p> Managing your Time </p> </a> -->
                         <br><br>
                         <h2><a href="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/html_files/edu.html" style="color : #2E2C2C"> EDUCATION </a></h2> 
                         <h3 style="font-weight:bold; color: #666666; text-align:left"> Current</h3>
