--- a/Project_0/html_files/Resume.html
+++ b/Project_0/html_files/Resume.html
@@ -6,7 +6,7 @@
         <title>Akshay's Resume</title>
         <style>
         .body{
-            margin:100px;
+            padding :100px;
         }
         </style>
         <link rel="stylesheet" href="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/scss_files/styl1.css">
