--- a/Project_0/html_files/Resume.html
+++ b/Project_0/html_files/Resume.html
@@ -44,7 +44,7 @@
                     <!-- <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/2.png" height="27px" width="27px" style="float:left" > -->
                     <p style="font-size:17px">&#160 Phone Number: +9110925632</p>
                     <!-- <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/linkedin-icon.png" height="27px" width="27px" style="float:left" > -->
-                    <p style="font-size:17px">&#160 <a href="https://www.linkedin.com/in/akshay-kumar-b8025a130/">Linkedin : https://www.linkedin.com/in/akshay-kumar-b8025a130/ </a></p>
+                    <p style="font-size:17px">&#160 <a href="https://www.linkedin.com/in/akshay-kumar-b8025a130/">Linkedin : https://bit.ly/2XQrZ7T </a></p>
                     <!-- <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/location-icon-png-4252.png" height="27px" width="27px" style="float:left" > -->
                     <p style="font-size:17px">&#160 Location: Bangalore, India</p>
                     <!-- <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/z.png" height="27x" width="27px" style="float:left" >
