--- a/Project_0/html_files/Resume.html
+++ b/Project_0/html_files/Resume.html
@@ -33,7 +33,7 @@
                     <h3 style="color:#007fff">Computer Scientist</h3>
                         <p>An Undergraduate (Second year) student but with a lot of great ideas and experiences. Hard working personality with good Coding skills.
                             My greatest strength is Data Structres and Algorithms with good Mathematics background.
-                            Striving to leverage my skills at XYZ Corp.
+                            Striving to leverage my skills at Clarisights.
                         </p>
                 </div>
                 <div class="col-md-2"></div>
