--- a/Project_0/html_files/Resume.html
+++ b/Project_0/html_files/Resume.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"><!--Bootstrap 3.4-->
         <title>Akshay's Resume</title>
         <style>
-        .body{
+        body{
             padding :100px;
         }
         </style>
