--- a/Project_0/html_files/Resume.html
+++ b/Project_0/html_files/Resume.html
@@ -38,13 +38,13 @@
                 </div>
                 <div class="col-md-2"></div>
                 <div class="col-md-3" >
-                    <br><br><br><br><br>
+                    <br><br>
                     <!-- <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/01.png" height="27px" width="27px" style="float:left" > -->
                     <p style="font-size:17px">&#160 Email: akshaykrcc@live.com</p>
                     <!-- <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/2.png" height="27px" width="27px" style="float:left" > -->
                     <p style="font-size:17px">&#160 Phone Number: +9110925632</p>
                     <!-- <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/linkedin-icon.png" height="27px" width="27px" style="float:left" > -->
-                    <p style="font-size:17px">&#160 <a href="https://www.linkedin.com/in/akshay-kumar-b8025a130/">Linkedin : https://bit.ly/2XQrZ7T </a></p>
+                    <p style="font-size:17px">&#160 <a href="https://www.linkedin.com/in/akshay-kumar-b8025a130/">Linkedin : </a></p>
                     <!-- <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/location-icon-png-4252.png" height="27px" width="27px" style="float:left" > -->
                     <p style="font-size:17px">&#160 Location: Bangalore, India</p>
                     <!-- <img src="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/icon/z.png" height="27x" width="27px" style="float:left" >
@@ -72,15 +72,15 @@
                         <br><br><br>
                         <h2 id = "certificates"> CERTIFICATIONS </h2>   
                             <h3> Design and Analysis of Algorithms </h3> 
-                                <a href="https://nptel.ac.in/noc/social_cert/noc18-cs37/NPTEL18CS37S211511891810000375.jpg"> <p> NPTEL(IIT-M) : https://nptel.ac.in/noc/social_cert/noc18-cs37/NPTEL18CS37S211511891810000375.jpg </p> </a>
+                                <a href="https://nptel.ac.in/noc/social_cert/noc18-cs37/NPTEL18CS37S211511891810000375.jpg"> <p> NPTEL(IIT-M) :  </p> </a>
                             <h3> Mathematics for Machine Learning </h3>
-                                <a href="https://www.coursera.org/account/accomplishments/records/L2T4JYRD8BP6"> <p> Coursera : https://www.coursera.org/account/accomplishments/records/L2T4JYRD8BP6</p>  </a>
+                                <a href="https://www.coursera.org/account/accomplishments/records/L2T4JYRD8BP6"> <p> Coursera : </p>  </a>
                             <h3> Databases and SQL for Data Science (IBM) </h3>
-                                <a href="https://www.coursera.org/account/accomplishments/verify/EC4R26WVXTA3"> <p> Coursera : https://www.coursera.org/account/accomplishments/verify/EC4R26WVXTA3 </p> </a>
+                                <a href="https://www.coursera.org/account/accomplishments/verify/EC4R26WVXTA3"> <p> Coursera : </p> </a>
                             <!-- <h3> Time Management </h3>
                                 <a href="http://www.linkedin.com/learning/managing-your-time"> <p> Managing your Time </p> </a> -->
                         <br><br>
-                        <h2><a href="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/html_files/edu.html" style="color : #2E2C2C"> EDUCATION </a></h2> 
+                        <h2> EDUCATION </a></h2> 
                         <h3 style="font-weight:bold; color: #666666; text-align:left"> Current</h3>
                         <div style="text-align:left">
                             <h3>Undergraduate</h3>
@@ -99,8 +99,8 @@
                 <h3 style="font-weight:bold; color: #666666; text-align:left">Internships</h3>
                 <p>Actively Looking for Software Development Engineer(SDE) and Web Development Internships.</p>
                 <br><br>
-                <h2> INTERESTS </h2> <br>
-                <button type="button" class="btn btn-default btn-lg"> Competetive Coding </button> <button type="button" class="btn btn-default btn-lg"> Artificial Intellingence </button> <button type="button" class="btn btn-default btn-lg"> Painting </button><br><br> <a href="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/html_files/books.html"><button type="button" class="btn btn-default btn-lg"> Reading </button> </a><button type="button" class="btn btn-default btn-lg"> Public Speaking </button> <a href="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/html_files/travel.html"><button type="button" class="btn btn-default btn-lg"> Travelling </button></a>
+                <!-- <h2> INTERESTS </h2> <br>
+                <button type="button" class="btn btn-default btn-lg"> Competetive Coding </button> <button type="button" class="btn btn-default btn-lg"> Artificial Intellingence </button> <button type="button" class="btn btn-default btn-lg"> Painting </button><br><br> <a href="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/html_files/books.html"><button type="button" class="btn btn-default btn-lg"> Reading </button> </a><button type="button" class="btn btn-default btn-lg"> Public Speaking </button> <a href="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/html_files/travel.html"><button type="button" class="btn btn-default btn-lg"> Travelling </button></a> -->
             </div>
         </div>
     </body>
