--- a/Project0/books.html
+++ b/Project0/books.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width = device-width, initial-scale = 1.0">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <!--Bootstrap 4.3.1-->
         <title> Books Recommenddation</title>
         <style>
@@ -45,9 +45,9 @@
                             timeless wisdom, and encourages us to live a life of great and enduring purpose.</p></br>
                     
                         <h4>Back to:</h4><br>
-                            <p><a href="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/html_files/Resume.html"><button type="button" class="btn btn-primary btn-lg"> Resume </button> </a></p>
-                            <p><a href="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/html_files/edu.html"><button type="button" class="btn btn-primary btn-lg"> Education </button> </a></p>
-                            <p><a href="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/html_files/travel.html"><button type="button" class="btn btn-primary btn-lg"> My Travel Recommendations </button> </a></p>
+                            <p><a href="Resume.html"><button type="button" class="btn btn-primary btn-lg"> Resume </button> </a></p>
+                            <p><a href="edu.html"><button type="button" class="btn btn-primary btn-lg"> Education </button> </a></p>
+                            <p><a href="travel.html"><button type="button" class="btn btn-primary btn-lg"> My Travel Recommendations </button> </a></p>
                         </ol>
         </div>
         
