--- a/Project0/edu.html
+++ b/Project0/edu.html
@@ -2,25 +2,30 @@
 <html>
     <head>
         <meta name="viewport" content="width = device-width, initial-scale = 1.0">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <!--Bootstrap 4.3.1-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <!--Bootstrap 4.0-->
         <title> Education details </title>
-        <link rel="stylesheet" href="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/scss_files/stylEdu.css">
+        <link rel="stylesheet" href="css_Files/stylEdu.css">
     </head>
 
     <body>
 
-        <nav class="navbar navbar-dark bg-dark navbar-fixed-top">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Education Details</a>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark navbar-fixed-top">
+                <a class="navbar-brand" href="#">Education Details</a>                
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="nav navbar-nav">
+                        <li class="nav-item active">
+                            <a class ="nav-link" href="#BE"> Bachelor's in CSE </a> 
+                        </li>
+                        <li class="nav-item active">
+                            <a class ="nav-link" href="#HS"> High School </a>
+                        </li>
+                    </ul>
                 </div>
-
-                <div class="nav navbar-nav">
-                    <a href="#BE"> Bachelor's in CSE </a> 
-                    <a href="#HS"> High School </a>
-                </div>
-            </div>
+           
         </nav>
         <div class="rest">
             <div class="table-responsive">
@@ -103,9 +108,9 @@
                 </div>
             <br>
             <h4>Back to:</h4><br>
-                <p><a href="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/html_files/Resume.html"><button type="button" class="btn btn-primary btn-lg"> Resume </button> </a></p>
-                <p><a href="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/html_files/books.html"><button type="button" class="btn btn-primary btn-lg"> Book Recommendations </button> </a></p>
-                <p><a href="/home/akshay/Code_/code/CS50WP/CS50Web/Project_0/html_files/travel.html"><button type="button" class="btn btn-primary btn-lg"> My Travel Recommendations </button> </a></p>
+                <p><a href="Resume.html"><button type="button" class="btn btn-primary btn-lg"> Resume </button> </a></p>
+                <p><a href="books.html"><button type="button" class="btn btn-primary btn-lg"> Book Recommendations </button> </a></p>
+                <p><a href="travel.html"><button type="button" class="btn btn-primary btn-lg"> My Travel Recommendations </button> </a></p>
         </div>
     </body>
 </html>
