--- a/README.html
+++ b/README.html
@@ -1,22 +1,18 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>CS50 Projects</title>
-        <meta name="viewport" content="width = device-width, initial-scale = 1.0">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-        <style>
-             body {
-                padding: 50px;
-             }
-        </style>
-    </head>
+### CS50's Web Programming with Python and JavaScript
+-----------------------------
 
-    <body>
-        <div>
-            <h2>List of Projects</h2>
-            <ol>
-                <li><a href="Project_0/html_files/Resume.html">Project 0</a></li>
-            </ol>
-        </div>
-    </body>
-</html>
+
+![Image_50](https://crowdin-static.downloads.crowdin.com/images/project-logo/286607/small/493157c2f1d00f20cdecc4c4c7f28c99252.png)
+
+##### Project 0
+----------------------------------
+
+-Project consisits of 4 webpages.
+
+-The first webpage is my one-page Resume(with embeded link for other pages), the second one is my Education Details and Achievments, the last two are my recommendations for books and places to visit in India.
+
+-I have tried to make all pages Mobile responsive.
+
+*Hope it fulfills all the requirments of the Project. Thanks*	:smile:
+
+
