--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div>
             <h2>List of Projects</h2>
             <ol>
-                <li><a href="Project_0/html_files/Resume.html">Project 0</a></li>
+                <li><a href="Project0/Resume.html">Project 0</a></li>
             </ol>
         </div>
     </body>
