--- a/Project0/Resume.html
+++ b/Project0/Resume.html
@@ -33,7 +33,7 @@
         <div class = "topBand" id="Bio">
             <h2><b> Akshay Kumar </b></h2><br>
             <h3>Computer Scientist</h3>
-            <p> An Undergraduate(2nd Year) but with lots of great ideas and expereinces. Hard working personality, with great coding skilss. My strength is Data Structures and Algorithms with good Mathematics background. Striving to leverage my skills at XYZ.org. </p>
+            <p> An Undergraduate(2nd Year) but with lots of great ideas and expereinces. Hard working personality, with great coding skills. My strength is Data Structures and Algorithms with good Mathematics background. Striving to leverage my skills at XYZ.org. </p>
         </div>
         <br>
         <!--middle start-->
