--- a/Project0/travel.html
+++ b/Project0/travel.html
@@ -110,7 +110,7 @@
                 </div>
                 <div class="col-md-5">
                     <br><br><br>
-                    <img src="http://www.beyondtravels.com/admin/assets/images/banner3.jpg" class="img-fluid">
+                    <img src="https://travocrm-images.s3.ap-south-1.amazonaws.com/15595598670.jpg" class="img-fluid">
                 </div>
                 <div class="col-md-3">
                         <br><br><br>
