--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="Project0/Resume.html">Project 0</a></li>
             </ol>
             <ol>
-                <li><a href="project1/templates/index.html">Project 1</a></l>
+                <li><a href="project1">Project 1</a></l>
             </ol>
         </div>
     </body>
